test/runnable/link12144.d
// COMPILE_SEPARATELY
// EXTRA_SOURCES: imports/link12144a.d

import imports.link12144a;
void main() { fun(); }
